--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
   <canvas id="matrix"></canvas>
 
   <header>
-    <h1>⬇️ DOWNLOAD FB LITE VERSIONS</h1>
-    <h2>Serverx Inc</h2>
+    <h1>Serverx Inc</h1>
+    <h2>Download All Fb Mod Versions</h2>
   </header>
 
   <div class="button-grid">
